@@ -1,3 +1,8 @@
+2005-01-06  Miles Bader  <miles@gnu.org>
+
+	* isearch.el (lazy-highlight): Renamed from `lazy-highlight-face'.
+	(isearch-lazy-highlight-face): Use new name.
+
 2005-01-05  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* uniquify.el (uniquify-rationalize-file-buffer-names):
